--- a/Style.css
+++ b/Style.css
@@ -1,5 +1,5 @@
 ﻿
-@media screen and (max-width: 800px){
+
 
 .a {
     width: 220px;
@@ -123,7 +123,7 @@ ul {
 .slider {
     width:auto;
     top: 1100px;
-    max-width: 1535px;
+    max-width: 100%;
     position: relative;
     margin: auto;
     height: 200px;
@@ -353,6 +353,6 @@ ul {
     z-index: -1;
     text-shadow: 1px 1px 1px white, 2px 2px 1px white;
 }
-}
+
 
 
